Move project to C
Changed the project to rather use C than C++.
This is done mainly so that I don't have access to the standard library,
and must train on doing more myself.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3.2)
-project(ylva_and_malin CXX)
+project(ylva_and_malin)
 
 string(TOLOWER ${CMAKE_BUILD_TYPE} YM_OUTPUT_FOLDER)
 set(CMAKE_BINARY_DIR "$ENV{YM_BUILD_DIR}/${YM_OUTPUT_FOLDER}")
@@ -7,28 +7,28 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
 # Compiler setup
+set(CMAKE_C_COMPILER gcc-7)
 set(CMAKE_CXX_COMPILER g++-7)
 
-set(CMAKE_CXX_FLAGS
-    "${CMAKE_CXX_FLAGS}     \
-    -std=c++1z              \
+set(CMAKE_C_FLAGS
+    "${CMAKE_C_FLAGS}       \
+    -std=c11                \
     -Wall                   \
     -Wextra                 \
-    -Wreorder               \
     -DYM_ASSERT_TERMINATE   \
     "
 )
 
-set(CMAKE_CXX_FLAGS_DEBUG
-    "${CMAKE_CXX_FLAGS}     \
+set(CMAKE_C_FLAGS_DEBUG
+    "${CMAKE_C_FLAGS}       \
     -g3                     \
     -ggdb                   \
     -O0                     \
     "
 )
 
-set(CMAKE_CXX_FLAGS_RELEASE
-    "${CMAKE_CXX_FLAGS_RELEASE} \
+set(CMAKE_C_FLAGS_RELEASE
+    "${CMAKE_C_FLAGS_RELEASE}   \
     -O3                         \
     "
 )
@@ -39,19 +39,20 @@ subdirs(
 )
 
 if (${YM_ENABLE_TESTS})
-    set(CMAKE_CXX_FLAGS
-        "${CMAKE_CXX_FLAGS}     \
+    set(CMAKE_C_FLAGS
+        "${CMAKE_C_FLAGS}       \
         -UYM_ASSERT_TERMINATE   \
-        -DYM_ASSERT_THROW       \
+        -DYM_ASSERT_ERRC        \
         "
     )
 endif()
 
 if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Test")
-    add_executable(main main.cpp)
+    add_executable(main main.c)
 
     target_link_libraries(main
-        ym_std
-        ym_macros
+        ym_core
+        ym_graphics
+        ym_memory
     )
 endif()
