Add core C files
Added a lot of core files.
Like the asserts, attributes, etc.

--- a/src/ym/core/CMakeLists.txt
+++ b/src/ym/core/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(ym_core INTERFACE)
-target_include_directories(ym_core INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}
+add_library(ym_core
+    ym_error.c
+    ym_log.c
 )
+
+target_include_directories(ym_core PUBLIC
+    "${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
