--- a/src/ym/graphics/CMakeLists.txt
+++ b/src/ym/graphics/CMakeLists.txt
@@ -1,15 +1,44 @@
-add_library(ym_graphics
+set(headers
+    ym_gfx.h
+)
+
+set(source
     ym_gfx.c
+)
+
+if (WIN32)
+set(source
+    ym_gfx_win.c
+)
+else()
+set(source
+    ym_gfx_unix.c
+)
+endif()
+
+add_library(ym_graphics
+    ${headers}
+    ${source}
 )
 
 target_include_directories(ym_graphics
     PUBLIC
         "${CMAKE_CURRENT_SOURCE_DIR}"
 )
+
 target_link_libraries(ym_graphics
     ym_core
     ym_memory
-    X11
-    GL
-    GLU
 )
+
+if (WIN32)
+    target_link_libraries(ym_graphics
+        OpenGL32
+    )
+else()
+    target_link_libraries(ym_graphics
+        X11
+        GL
+        GLU
+    )
+endif()
