--- a/src/ym/telemetry/CMakeLists.txt
+++ b/src/ym/telemetry/CMakeLists.txt
@@ -1,5 +1,14 @@
-add_library(ym_telemetry
+set(headers
+    ym_telemetry.h
+)
+
+set(source
     ym_telemetry.c
+)
+
+add_library(ym_telemetry
+    ${headers}
+    ${source}
 )
 
 target_include_directories(ym_telemetry
@@ -10,5 +19,12 @@ target_include_directories(ym_telemetry
 target_link_libraries(ym_telemetry
     ym_core
     ym_memory
-    pthread
 )
+
+if (WIN32)
+
+else()
+    target_link_libraries(ym_telemetry
+        pthread
+    )
+endif()
