fix #13: Move to OpenGL 4.5
Should now have removed all of the old OpenGL functionality. However,
need to test on windows before really closing this.

--- a/src/ym/graphics/CMakeLists.txt
+++ b/src/ym/graphics/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(headers
     ym_gfx.h
     ym_gfx_gl.h
+    ym_gfx_gl_procs.h
 )
 
 set(source
-    ym_gfx.c
+    ym_gfx_gl.c
+    ym_gfx_gl_init.c
 )
 
 if (WIN32)
@@ -16,11 +18,12 @@ if (WIN32)
     )
 
     set(source
+        ${source}
         ym_gfx_win.c
-        ym_gfx_gl_win.c
     )
 else()
     set(source
+        ${source}
         ym_gfx_unix.c
     )
 endif()
