fix #45: Add loading of PNG files
Can now load PNG files, have also gotten basic texture code up and
going, but need to pull it out into own functions.

--- a/src/ym/core/CMakeLists.txt
+++ b/src/ym/core/CMakeLists.txt
@@ -7,6 +7,7 @@ set(headers
     ym_log.h
     ym_warnings.h
     ym_types.h
+    ym_time.h
 )
 
 set(source
@@ -22,4 +23,3 @@ add_library(ym_core
 target_include_directories(ym_core PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}"
 )
-
