--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_BINARY_DIR "$ENV{YM_BUILD_DIR}/${YM_OUTPUT_FOLDER}")
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
+
 # Compiler setup
 if (NOT WIN32)
     set(CMAKE_C_COMPILER gcc-7)
@@ -87,4 +88,6 @@ if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Test")
         ym_memory
         ym_telemetry
     )
+
+    set_target_properties(main PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$ENV{YM_ROOT_DIR}")
 endif()
