--- a/src/ym/core/CMakeLists.txt
+++ b/src/ym/core/CMakeLists.txt
@@ -5,9 +5,10 @@ set(headers
     ym_core.h
     ym_error.h
     ym_log.h
-    ym_warnings.h
-    ym_types.h
+    ym_math.h
     ym_time.h
+    ym_types.h
+    ym_warnings.h
 )
 
 set(source
@@ -22,4 +23,8 @@ add_library(ym_core
 
 target_include_directories(ym_core PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
+target_link_libraries(ym_core
+    m #math
 )
