ym_sprite compiles on windows
The ym_sprite branch now compiles on windows, even though it is not fully
functional. Because of missing timing functionality animations isn't
working properly, also a bunch of hacks were done to ensure the code
working, which isn't nice. Like introducing the global window ptr in
ym_gfx_win.c.

Also fixed missing if-else logic in CMakeLists for ym_core.

--- a/src/ym/core/CMakeLists.txt
+++ b/src/ym/core/CMakeLists.txt
@@ -25,6 +25,10 @@ target_include_directories(ym_core PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
-target_link_libraries(ym_core
-    m #math
-)
+if (WIN32)
+
+else()
+    target_link_libraries(ym_core
+        m #math
+    )
+endif()
