Add semi functioning meta_generator
Show that functionally the meta_generator works, however it still needs to
be able to parse input, output, and read files from cache.

--- a/meta_generator/CMakeLists.txt
+++ b/meta_generator/CMakeLists.txt
@@ -1,15 +1,25 @@
 cmake_minimum_required(VERSION 3.3.2)
 project(meta_generator)
 
-set(CMAKE_CXX_COMPILER clang++-5.0)
+if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	message("If was true")
+	set(CMAKE_CXX_COMPILER clang++-5.0)
+	set(CMAKE_CXX_FLAGS
+		"${CMAKE_CXX_FLAGS}      \
+		-std=c++17               \
+		-Wall                    \
+		-Wextra                  \
+		"
+	)
+else()
+	set(CMAKE_CXX_FLAGS
+		"${CMAKE_CXX_FLAGS}      \
+		/std:c++17               \
+		/W3						 \
+		"
+	)
+endif()
 
-set(CMAKE_CXX_FLAGS
-    "${CMAKE_CXX_FLAGS}       \
-     -std=c++17               \
-     -Wall                    \
-     -Wextra                  \
-    "
-)
 
 subdirs(
     src
