--- a/editor/src/CMakeLists.txt
+++ b/editor/src/CMakeLists.txt
@@ -6,21 +6,28 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
 if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTK REQUIRED gtk+-2.0)
     set(CMAKE_CXX_COMPILER clang++-5.0)
     set(CMAKE_CXX_FLAGS
         "${CMAKE_CXX_FLAGS}      \
         -std=c++17               \
         -Wall                    \
-        -Wextra                  \
+        -DNOC_FILE_DIALOG_GTK    \
+        -O3                      \
         "
     )
+        #-Wextra                  \
+
 else()
     set(CMAKE_CXX_FLAGS
         "${CMAKE_CXX_FLAGS}      \
         /std:c++17               \
         /W3                      \
+        /DNOC_FILE_DIALOG_WIN32  \
         "
     )
+
 endif()
 
 
@@ -42,23 +49,51 @@ set(source
 
 add_executable(main main.cpp ${headers} ${source})
 
-# Update these for when moving to linux
-target_include_directories(main PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}"
-    "${CMAKE_CURRENT_SOURCE_DIR}/third_party/"
-    "$ENV{SFML_HOME}/include"
-)
+if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    # Update these for when moving to linux
+    target_include_directories(main PUBLIC
+                               "${CMAKE_CURRENT_SOURCE_DIR}"
+                               "${CMAKE_CURRENT_SOURCE_DIR}/third_party/"
+                               "${GTK_INCLUDE_DIRS}"
+                               )
 
-target_link_libraries(main
-    # For weird reason SFML textures don't work when using release libs. Don't bother fixing it, as debug is enough for editor
-    "$ENV{SFML_HOME}/lib/sfml-audio-d.lib"
-    "$ENV{SFML_HOME}/lib/sfml-graphics-d.lib"
-    "$ENV{SFML_HOME}/lib/sfml-main-d.lib"
-    "$ENV{SFML_HOME}/lib/sfml-network-d.lib"
-    "$ENV{SFML_HOME}/lib/sfml-system-d.lib"
-    "$ENV{SFML_HOME}/lib/sfml-window-d.lib"
+    target_link_libraries(main
+                          # For weird reason SFML textures don't work when using release libs. Don't bother fixing it, as debug is enough for editor
+                          "sfml-audio"
+                          "sfml-graphics"
+                          #"sfml-main"
+                          "sfml-network"
+                          "sfml-system"
+                          "sfml-window"
+                          "${GTK_LIBRARIES}"
 
-    "OpenGL32.lib"
-)
+                          "GL"
+                          stdc++fs
+                          )
 
-set_target_properties(main PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$ENV{YM_ROOT_DIR}")
+else()
+    # Update these for when moving to linux
+    target_include_directories(main PUBLIC
+                               "${CMAKE_CURRENT_SOURCE_DIR}"
+                               "${CMAKE_CURRENT_SOURCE_DIR}/third_party/"
+                               "$ENV{SFML_HOME}/include"
+                               )
+
+    target_link_libraries(main
+                          # For weird reason SFML textures don't work when using release libs. Don't bother fixing it, as debug is enough for editor
+                          "$ENV{SFML_HOME}/lib/sfml-audio-d.lib"
+                          "$ENV{SFML_HOME}/lib/sfml-graphics-d.lib"
+                          "$ENV{SFML_HOME}/lib/sfml-main-d.lib"
+                          "$ENV{SFML_HOME}/lib/sfml-network-d.lib"
+                          "$ENV{SFML_HOME}/lib/sfml-system-d.lib"
+                          "$ENV{SFML_HOME}/lib/sfml-window-d.lib"
+
+                          "OpenGL32.lib"
+                          )
+
+    set_target_properties(main PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$ENV{YM_ROOT_DIR}")
+
+endif()
+
+
+
