--- a/game/src/CMakeLists.txt
+++ b/game/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.3.2)
 project(ylva_and_malin)
 
 string(TOLOWER ${CMAKE_BUILD_TYPE} YM_OUTPUT_FOLDER)
-set(CMAKE_BINARY_DIR "$ENV{YM_BUILD_DIR}/${YM_OUTPUT_FOLDER}")
+set(CMAKE_BINARY_DIR "$ENV{YM_BUILD_DIR}/game/${YM_OUTPUT_FOLDER}")
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
